--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "devDependencies": {
-    "eslint": "^8.56.0"
+  "name": "jhonneg",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "bunx --bun vite",
+    "build": "bunx --bun tsc && vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "serve": "^14.2.1"
+  "devDependencies": {
+    "sass": "^1.77.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
