--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "lucide-react": "^0.456.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
